test/ui/test/lowering/toplevel-obligatory-annotations.stderr
error[E015]: the declaration ‘Alpha’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:1:11
  │
1 │ data Alpha of
  │          ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
1 │ data Alpha: Type of
  │           ~~~~~~

error[E015]: the parameter ‘a’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:2:11
  │
2 │     alpha a
  │           ═ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
2 │     alpha (a: Type)
  │           ~~~~~~~~~

error[E015]: the declaration ‘alpha’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:2:12
  │
2 │     alpha a
  │           ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
2 │     alpha a: Type
  │            ~~~~~~

error[E015]: the parameter ‘A’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:4:11
  │
4 │ data Beta A of
  │           ═ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
4 │ data Beta (A: Type) of
  │           ~~~~~~~~~

error[E015]: the declaration ‘Beta’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:4:12
  │
4 │ data Beta A of
  │           ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
4 │ data Beta A: Type of
  │            ~~~~~~

error[E015]: the parameter ‘A’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:5:10
  │
5 │     beta A: Beta A
  │          ═ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
5 │     beta (A: Type): Beta A
  │          ~~~~~~~~~

error[E015]: the declaration ‘number’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:7:7
  │
7 │ number = 0
  │      ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
7 │ number: Type = 0
  │       ~~~~~~

error[E015]: the parameter ‘f’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:7
  │
9 │ apply f x (y) = f x
  │       ═ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
9 │ apply (f: Type) x (y) = f x
  │       ~~~~~~~~~

error[E015]: the parameter ‘x’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:9
  │
9 │ apply f x (y) = f x
  │         ═ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
9 │ apply f (x: Type) (y) = f x
  │         ~~~~~~~~~

error[E015]: the parameter ‘y’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:11
  │
9 │ apply f x (y) = f x
  │           ═══ missing mandatory type annotation
  │
 help: annotate the parameter with a type
  │
9 │ apply f x (y: Type) = f x
  │           ~~~~~~~~~

error[E015]: the declaration ‘apply’ does not have a type annotation
  ┌─ ${TEST_FOLDER}/lowering/toplevel-obligatory-annotations.lushui:9:14
  │
9 │ apply f x (y) = f x
  │             ⟫⟪ missing mandatory type annotation
  │
 help: annotate the declaration with a type
  │
9 │ apply f x (y): Type = f x
  │              ~~~~~~

error: aborting due to 11 previous errors

